--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
       `;
 
       // Open the user's email client to send the email
-      window.location.href = `mailto:${client_email}?subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`;
+      window.location.href = `mailto:caffeinatededitors@gmail.com?subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`;
 
       // Close the modal
       modal.style.display = "none";
