--- a/index.html
+++ b/index.html
@@ -314,22 +314,31 @@
         return;
       }
 
-      // Create the email content
-      var emailSubject = "New Meeting Booking";
-      var emailBody = `
-        <h2>New Meeting Booking</h2>
-        <p><strong>Name:</strong> ${client_name}</p>
-        <p><strong>Email:</strong> ${client_email}</p>
-        <p><strong>Date:</strong> ${meeting_date.toDateString()}</p>
-        <p><strong>Time:</strong> ${meeting_time}</p>
-        <p><strong>Message:</strong> ${message}</p>
-      `;
-
-      // Open the user's email client to send the email
-      window.location.href = `mailto:caffeinatededitors@gmail.com?subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`;
-
-      // Close the modal
-      modal.style.display = "none";
+      // Send form data to the server
+      fetch('https://your-server.com/api/send-email', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({
+          client_name: client_name,
+          client_email: client_email,
+          meeting_date: meeting_date.toDateString(),
+          meeting_time: meeting_time,
+          message: message
+        })
+      })
+      .then(function(response) {
+        if (response.ok) {
+          alert('Meeting booked successfully!');
+          modal.style.display = "none";
+        } else {
+          alert('Failed to book the meeting.');
+        }
+      })
+      .catch(function(error) {
+        alert('Error: ' + error.message);
+      });
     });
 
     // Intersection Observer for Animations
