--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
       }
 
       // Send form data to the server
-      fetch('https://your-server.com/api/send-email', {
+      fetch('/api/send-email', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
