--- a/index.html
+++ b/index.html
@@ -161,12 +161,40 @@
 
     /* Responsive Design */
     @media (max-width: 768px) {
+      .modal-content {
+        width: 90%;
+        margin: 20% auto;
+      }
+
+      .book-meeting {
+        padding: 30px 0;
+      }
+
+      .book-meeting button {
+        padding: 10px 15px;
+        font-size: 16px;
+      }
+
       .grid-item {
         width: calc(50% - 15px);
       }
     }
 
     @media (max-width: 480px) {
+      .modal-content {
+        width: 95%;
+        margin: 25% auto;
+      }
+
+      .book-meeting {
+        padding: 20px 0;
+      }
+
+      .book-meeting button {
+        padding: 8px 10px;
+        font-size: 14px;
+      }
+
       .grid-item {
         width: 100%;
       }
