--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
   </section>
 
   <section class="section grid-container fade-in">
-    <div class="grid-item"><video src="your-video-1.mp4" autoplay muted loop playsinline></video></div>
-    <div class="grid-item"><video src="your-video-2.mp4" autoplay muted loop playsinline></video></div>
+    <div class="grid-item"><video src="v1.mp4" autoplay muted loop playsinline></video></div>
+    <div class="grid-item"><video src="v2.mp4" autoplay muted loop playsinline></video></div>
     <div class="grid-item"><video src="your-video-3.mp4" autoplay muted loop playsinline></video></div>
     <div class="grid-item"><video src="your-video-4.mp4" autoplay muted loop playsinline></video></div>
   </section>
