--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     }
 
     .grid-item {
-      width: calc(50% - 15px);
+      width: calc(30% - 15px); /* Reduced by 40% */
       aspect-ratio: 9 / 16;
       overflow: hidden;
       border-radius: 10px;
