--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
     .grid-container {
       display: flex;
       justify-content: center;
+      align-items: center;
       gap: 20px;
       flex-wrap: wrap;
       padding: 0 20px;
     }
 
     .grid-item {
-      width: 1440px;
-      height: 2560px;
+      width: 50%; /* Half the original size */
+      max-width: 720px; /* Half of 1440px */
+      max-height: 1280px; /* Half of 2560px */
       overflow: hidden;
       border-radius: 10px;
       text-align: center;
@@ -160,13 +162,6 @@
     }
 
     /* Responsive Design */
-    @media (max-width: 1440px) {
-      .grid-item {
-        width: 100%;
-        height: auto;
-      }
-    }
-
     @media (max-width: 768px) {
       .modal-content {
         width: 90%;
@@ -184,7 +179,8 @@
 
       .grid-item {
         width: 100%;
-        height: auto;
+        max-width: 100%;
+        max-height: auto;
       }
     }
 
@@ -205,7 +201,8 @@
 
       .grid-item {
         width: 100%;
-        height: auto;
+        max-width: 100%;
+        max-height: auto;
       }
     }
 
