--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
       }
 
       .grid-item {
-        width: 100%;
-        max-width: 100%;
-        max-height: auto;
+        width: 50%;
+        max-width: 50%;
+        max-height: 50%;
       }
     }
 
