--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
     }
 
     .grid-item {
-      width: 50%; /* Half the original size */
-      max-width: 720px; /* Half of 1440px */
-      max-height: 1280px; /* Half of 2560px */
-      overflow: hidden;
-      border-radius: 10px;
-      text-align: center;
+width: 50%;
+  max-width: 280px;
+  max-height: 1280px;
+  overflow: hidden;
+  border-radius: 10px;
+  text-align: center;
     }
 
     .grid-item video {
@@ -200,9 +200,9 @@
       }
 
       .grid-item {
-        width: 50%;
-        max-width: 50%;
-        max-height: 50%;
+        width: 100%;
+        max-width: 100%;
+        max-height: auto;
       }
     }
 
