--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     .grid-container {
       display: flex;
       justify-content: center;
+      align-items: center;
       gap: 20px;
       flex-wrap: wrap;
       padding: 0 20px;
@@ -178,6 +179,12 @@
       .grid-item {
         width: calc(50% - 15px);
       }
+
+      .grid-item.v3, .grid-item.v4 {
+        width: 100%;
+        max-width: 100%;
+        max-height: auto;
+      }
     }
 
     @media (max-width: 480px) {
@@ -197,6 +204,12 @@
 
       .grid-item {
         width: 100%;
+      }
+
+      .grid-item.v3, .grid-item.v4 {
+        width: 100%;
+        max-width: 100%;
+        max-height: auto;
       }
     }
 
@@ -237,8 +250,13 @@
   </section>
 
   <section class="section grid-container fade-in">
-    <div class="grid-item"><video src="v3.mp4" controls muted loop playsinline></video></div>
-    <div class="grid-item"><video src="v4.mp4" controls muted loop playsinline></video></div>
+    <div class="grid-item"><video src="v1.mp4" controls muted loop playsinline></video></div>
+    <div class="grid-item"><video src="v2.mp4" controls muted loop playsinline></video></div>
+  </section>
+
+  <section class="section grid-container fade-in">
+    <div class="grid-item v3"><video src="v3.mp4" controls muted loop playsinline></video></div>
+    <div class="grid-item v4"><video src="v4.mp4" controls muted loop playsinline></video></div>
   </section>
 
   <section class="book-meeting">
