--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
       }
 
       .grid-item {
-        width: 100%;
+        width: calc(50% - 10px); /* Adjust the width to fit side by side */
       }
 
       .grid-item.v3, .grid-item.v4 {
-        width: 50%;
+        width: calc(50% - 10px); /* Adjust the width to fit side by side */
         max-width: 50%;
         max-height: auto;
       }
