--- a/index.html
+++ b/index.html
@@ -211,6 +211,14 @@
         max-width: 50%;
         max-height: auto;
       }
+
+      .video-container + .grid-container {
+        margin-top: 12px; /* Decrease distance by 80% */
+      }
+
+      .grid-container + .book-meeting {
+        margin-top: 16px; /* Decrease distance by 80% */
+      }
     }
 
     /* Padding and movement for first video */
