--- a/index.html
+++ b/index.html
@@ -203,17 +203,17 @@
       }
 
       .grid-item {
-        width: 100%; /* Make videos full-width on mobile */
+        width: 50%; /* Make videos half-width on mobile */
       }
 
       .grid-item.v3, .grid-item.v4 {
-        width: 100%; /* Make videos full-width on mobile */
-        max-width: 100%;
+        width: 50%; /* Make videos half-width on mobile */
+        max-width: 50%;
         max-height: auto;
       }
 
       .grid-container {
-        flex-direction: column; /* Stack v3 and v4 videos vertically */
+        flex-direction: row; /* Arrange v3 and v4 videos side by side */
       }
     }
 
